--- a/src/styles.css
+++ b/src/styles.css
@@ -9,24 +9,27 @@ html {
 }
 
 body {
+  font-family: sans-serif;
 }
 
 .container {
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-body {
-  font-family: sans-serif;
-}
-.container {
-  width: 100vw;
-  height: 100vh;
-}
+
 .container__controlButtons {
-  padding: 5px;
+  padding: 8px;
   margin: auto;
+  display: flex;
+  font-size: 15px;
+}
+.container__number {
+  height: 100px;
+  font-size: 80px;
+  padding: 10px;
   display: flex;
 }
